trafficLight/build/log/idf_py_stderr_output_4111
CMake Deprecation Warning at /home/ramin/ESP/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/home/ramin/Documents/learningCodeForESP32/trafficLight/main/main.c: In function 'Task1_blink_traffic_lights':
/home/ramin/Documents/learningCodeForESP32/trafficLight/main/main.c:50:49: error: expected ';' before '}' token
   50 |             delay(delay_Time_blinking_GREEN_led)
      |                                                 ^
      |                                                 ;
   51 |         }
      |         ~                                        
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7064: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
